SecurityPOC/force-app/main/default/objects/Case/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <description>When was corrective action taken?</description>
    <label>Action Date</label>
    <type>Date</type>
</CustomField>