SecurityPOC/force-app/main/default/objects/Case/fields/Corrective_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Taken__c</fullName>
    <label>Corrective Action Taken</label>
    <type>TextArea</type>
</CustomField>