SecurityPOC/force-app/main/default/objects/Case/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the disciplinary report being filed against?</description>
    <label>Employee Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Employee Name)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>