SecurityPOC/force-app/main/default/objects/Case/fields/Employee_Response_Statement__c.field-meta.xml
<CustomField>
    <fullName>Employee_Response_Statement__c</fullName>
    <label>Employee Response Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>