SecurityPOC/force-app/main/default/objects/Case/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Events</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>