SecurityPOC/force-app/main/default/objects/Case/fields/Final_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Final_Outcome__c</fullName>
    <label>Final Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>