SecurityPOC/force-app/main/default/objects/Case/fields/HR_Notified__c.field-meta.xml
<CustomField>
    <fullName>HR_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HR Notified?</label>
    <type>Checkbox</type>
</CustomField>