SecurityPOC/force-app/main/default/objects/Case/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unauthorized Access</fullName>
            </value>
            <value>
                <fullName>Door/Access Point Left Open</fullName>
            </value>
            <value>
                <fullName>Alarm Activation</fullName>
            </value>
            <value>
                <fullName>Disorderly Conduct</fullName>
            </value>
            <value>
                <fullName>Trespassing</fullName>
            </value>
            <value>
                <fullName>Verbal or Physical Threat</fullName>
            </value>
            <value>
                <fullName>Assault</fullName>
            </value>
            <value>
                <fullName>Theft/Attempted Theft</fullName>
            </value>
            <value>
                <fullName>Vandalism</fullName>
            </value>
            <value>
                <fullName>Property Damage</fullName>
            </value>
            <value>
                <fullName>Lost/Found Property</fullName>
            </value>
            <value>
                <fullName>Medical Emergency</fullName>
            </value>
            <value>
                <fullName>Fire/Smoke Detection</fullName>
            </value>
            <value>
                <fullName>Evacuation</fullName>
            </value>
            <value>
                <fullName>Slip/Trip/Fall</fullName>
            </value>
            <value>
                <fullName>Policy Violation</fullName>
            </value>
            <value>
                <fullName>Suspicious Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>