SecurityPOC/force-app/main/default/objects/Case/fields/Injuries_Reported__c.field-meta.xml
<CustomField>
    <fullName>Injuries_Reported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Injuries Reported?</label>
    <type>Checkbox</type>
</CustomField>