SecurityPOC/force-app/main/default/objects/Case/fields/Investigation_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Conducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investigation Conducted?</label>
    <type>Checkbox</type>
</CustomField>