SecurityPOC/force-app/main/default/objects/Case/fields/Police_Notified__c.field-meta.xml
<CustomField>
    <fullName>Police_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Police Notified?</label>
    <type>Checkbox</type>
</CustomField>