SecurityPOC/force-app/main/default/objects/Case/fields/Police_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Police_Report_Number__c</fullName>
    <label>Police Report Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>