SecurityPOC/force-app/main/default/objects/Case/fields/Policy_Violated__c.field-meta.xml
<CustomField>
    <fullName>Policy_Violated__c</fullName>
    <label>Policy Violated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attendance Policy</fullName>
            </value>
            <value>
                <fullName>Use of Force Policy</fullName>
            </value>
            <value>
                <fullName>Uniform &amp; Appearance Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>