SecurityPOC/force-app/main/default/objects/Case/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security Guard</fullName>
            </value>
            <value>
                <fullName>Armed Security Officer</fullName>
            </value>
            <value>
                <fullName>Mobile Patrol Officer</fullName>
            </value>
            <value>
                <fullName>Access Control Officer</fullName>
            </value>
            <value>
                <fullName>Fire Watch Officer</fullName>
            </value>
            <value>
                <fullName>Concierge Security Officer</fullName>
            </value>
            <value>
                <fullName>Loss Prevention Officer</fullName>
            </value>
            <value>
                <fullName>Site Supervisor</fullName>
            </value>
            <value>
                <fullName>Lead Guard/Shift Supervisor</fullName>
            </value>
            <value>
                <fullName>Patrol Supervisor</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>Training Officer</fullName>
            </value>
            <value>
                <fullName>Dispatcher</fullName>
            </value>
            <value>
                <fullName>Surveillance Operator</fullName>
            </value>
            <value>
                <fullName>Security Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>