SecurityPOC/force-app/main/default/objects/Case/fields/Repeat_Offense__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Offense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeat Offense?</label>
    <type>Checkbox</type>
</CustomField>