SecurityPOC/force-app/main/default/objects/Case/fields/Reviewed_By_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed By Supervisor?</label>
    <type>Checkbox</type>
</CustomField>