SecurityPOC/force-app/main/default/objects/Case/fields/Supervisor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Notes__c</fullName>
    <label>Supervisor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>