SecurityPOC/force-app/main/default/objects/Case/fields/Violation_Date__c.field-meta.xml
<CustomField>
    <fullName>Violation_Date__c</fullName>
    <label>Violation Date</label>
    <type>Date</type>
</CustomField>