SecurityPOC/force-app/main/default/objects/Case/fields/Violation_Type__c.field-meta.xml
<CustomField>
    <fullName>Violation_Type__c</fullName>
    <label>Violation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tardiness/No-Show</fullName>
            </value>
            <value>
                <fullName>Insubordination</fullName>
            </value>
            <value>
                <fullName>Negligence of Duty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>