SecurityPOC/force-app/main/default/objects/Case/recordTypes/Disciplinary_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Disciplinary_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Disciplinary</businessProcess>
    <label>Disciplinary Record Type</label>
</RecordType>