SecurityPOC/force-app/main/default/objects/Case/recordTypes/Incident_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Incident_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Incidents</businessProcess>
    <label>Incident Record Type</label>
</RecordType>