SecurityPOC/force-app/main/default/objects/Case/listViews/Disciplinary_Reports.listView-meta.xml
<ListView>
    <fullName>Disciplinary_Reports</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Disciplinary_Record_Type</value>
    </filters>
    <label>Disciplinary Reports</label>
</ListView>