SecurityPOC/force-app/main/default/objects/Case/listViews/Incident_Reports.listView-meta.xml
<ListView>
    <fullName>Incident_Reports</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Incident_Record_Type</value>
    </filters>
    <label>Incident Reports</label>
</ListView>